--- a/basic_carto.Rmd
+++ b/basic_carto.Rmd
@@ -11,11 +11,15 @@ library(grid)
 
 # get data- map of the world
 
+To download data of the world the block of code below was used. 
+It is commented out because the data may already be on your system.
+Uncomment each new line (by deleting the `#` symbol) if you need to 
+download and extract the data.
+
 ```{r}
-# uncomment first two lines if data not already downloaded
 # download.file(url="http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip", "ne_110m_admin_0_countries.zip", "auto")
 # unzip("ne_110m_admin_0_countries.zip", exdir = "data/")
-file.remove("ne_110m_admin_0_countries.zip")
+# file.remove("ne_110m_admin_0_countries.zip")
 ```
 
 
@@ -44,7 +48,7 @@ wrld.pop.f <- merge(wrld.rob.f, wrld@data, by.x = "id", by.y = "sov_a3")
 
 # continuous colour ramp
 
-```{r}
+```{r World map with continuous colour ramp fill}
 ggplot(wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) + 
   geom_polygon() + 
   coord_equal() + 
@@ -95,7 +99,7 @@ add a new layer from a completely different dataset, e.g. to add an
 arrow? To do this, we must not add any arguments to the `ggplot` function, 
 only adding data sources one layer at a time:
 
-```{r}
+```{r World map with custom lines added}
 arrow<-data.frame(c(2.97,2.97,2.9,3,3.1,3.03,3.03,2.97),c(1,4,4,5.5,4,4,1,1))
 names(arrow)<- c("x", "y")
 qplot(data  = arrow, x = x, y = y) 
@@ -112,7 +116,7 @@ own dataset. While more code is needed in this example, it enables much
 greater flexibility with regards to what can be included in new layer contents. 
 Another possibility is to use the `segment` geom to add a pre-made arrow:
 
-```{r}
+```{r World map with a North arrow}
 ggplot() + 
   geom_polygon(data = wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) +
   geom_line(aes(x = c(-160, -160), y = c(0, 25)), arrow = arrow()) 
