--- a/brief.Rmd
+++ b/brief.Rmd
@@ -96,6 +96,10 @@ system("pandoc -f markdown -t markdown introduction.md basic_carto.md R+sd.md re
 mess <- paste('pandoc -f markdown -t latex -s -o', "chapter.tex", 
               "chapter.md")
 system(mess) # create latex file
+
+mess <- paste("sed -i -e 's/plot of.chunk.//g' chapter.tex")
+system(mess) # replace "plot of chunk " text with nowth
+
 ```
 
 
