--- a/basic_carto.Rmd
+++ b/basic_carto.Rmd
@@ -15,49 +15,53 @@ library(ggplot2)
 library(gridExtra)
 ```
 
-You will also need create a folder and then set it as your working directory.
-```{r}
-setwd("/Users/james/Dropbox/Abstracts_Papers_Reviews/Geocomp_Chapter")
+You will also need create a folder and then set it as your working directory. Below we assume the name is `Uname`, and the folder is
+saved as `sdvwR` in the Desktop in Windows.
+
+```{r, eval=FALSE}
+setwd("c:/Users/Uname/Desktop/sdvwR")
 ```
 
-For this section we are going to use a map of the world to demonstrate some of the cartographic principles discussed. A world map is available from the Natural Earth website. The code below will download this and save it to your working directory. It is commented out because the data may already be on your system. Uncomment each new line (by deleting the `#` symbol) if you need to download and extract the data.
+For this section we are going to use a map of the world to demonstrate some of the cartographic principles discussed. A world map is available from the Natural Earth website. The code below will download this and save it to your working directory. 
 
 ```{r}
-#download.file(url="http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip", "ne_110m_admin_0_countries.zip", "auto")
-#unzip("ne_110m_admin_0_countries.zip")
-#file.remove("ne_110m_admin_0_countries.zip")
+download.file(url="http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip", "ne_110m_admin_0_countries.zip", "auto")
+unzip("ne_110m_admin_0_countries.zip", exdir="data/") # unzip to data folder
+file.remove("ne_110m_admin_0_countries.zip") # remove zip file
 ```
 Once downloaded we can then load the data into the R console. We have just downloaded a shapefile, which as Section XX explains, is not handled as a "standard" data object in R. 
 
-```{r}
-wrld <- readOGR(".", "ne_110m_admin_0_countries")
+```{r, Initial plot of world boundaries}
+wrld <- readOGR("data/", "ne_110m_admin_0_countries")
 plot(wrld)
 ```
 To see the first ten rows of attribute information assocuiated with each of the country boundaries type the following
 
-```{r}
+```{r, eval=FALSE}
 head(wrld@data)
 ```
 You can see there are a lot of columns associated with this file. Although we will keep all of the them, we are only really interested in the population estimate ("pop_est") field. Before progressing it is is worth reprojecting the data in order that the population data can be seen better. The coordinate reference system of the wrld shapefile is currently WGS84. This the common latitude and longitude format that all spatial software packages understand. From a cartographic perspective the standard plots of this projection, of the kind produced above, are not suitable since they distort the shapes of those countries further from the equator. Instead the Robinson projection provides a good compromise between areal distortion and shape preservation. We therefore project it as follows.
 ```{r}
-wrld.rob<-spTransform(wrld, CRS("+init=ESRI:54030"))
-plot(wrld.plot)
+library(geosphere)
+wrld.rob <- spTransform(wrld, CRS("+proj=robin"))
+plot(wrld.rob)
 ```
 "ESRI: 54030" is the reference code of the Robinson prjection in the database of projections that R downloads with the rgdal package. You will have spotted from the plot that the countries in the world map are much better proportioned.
 
 We now need to "fortify" this spatial data to convert it into a format that ggplot2 understands, we also use "merge" to re-attach the attribute data that is lost in the fortify operation.
 
 ```{r}
-wrld.rob.f<-fortify(wrld.rob, region="sov_a3")
+# fortify requires rgeos or maptools packages -
+# have we already loaded it? !!!
+wrld.rob.f <- fortify(wrld.rob, region="sov_a3")
 
 wrld.pop.f <- merge(wrld.rob.f, wrld.rob@data, by.x = "id", by.y = "sov_a3")
-
 ```
 
 ```{r}
 # continuous colour ramp
 
-map<-ggplot(wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) + 
+map <- ggplot(wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) + 
   geom_polygon() + 
   coord_equal() + 
   labs(x = "Longitude", y = "Latitude", fill = "World Population") + 
@@ -65,7 +69,7 @@ map<-ggplot(wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) +
 
 #better colours with more breaks- to finish
 
-map+ scale_fill_continuous(breaks=)
+map + scale_fill_continuous(breaks = c(10^c(8,9)))
 
 #categorical variables
 ```
@@ -85,7 +89,7 @@ green<-map2 + geom_polygon(fill="dark green") + theme(panel.background = element
 grid.arrange(blue, green, ncol=2)
 ```
 
-#Experimenting with line colour and line widths
+# Experimenting with line colour and line widths
 
 In addition to conforming to colour conventions, line colour and width offer important parameters, which are often overlooked tools for increasing the legibility of a graphic. As the code below demonstrates, it is possible to adjust line colour through using the "colour" parameter and the line width using the "lwd" parameter. The impact of different line widths will vary depending on your screen size and resolution. If you save the plot to pdf (or an image) then the size at which you do this will also affect the line widths.
 
@@ -105,7 +109,7 @@ grid.arrange(yellow, black,thick, thin, ncol=2)
 
 There are other parameters such as layer transparency that can be applied to all aspects of the plot - both points, lines and polygons - that we will reference in later examples in this chapter.
 
-#Map Adornments and Annotations
+# Map Adornments and Annotations
 
 Map adornments and annotations are essential to orientate the viewer and provide context; they include graticules, north arrows, scale bars and data attribution. Not all are required on a single map, indeed it is often best that they are used sparingly to avoid unecessary clutter (Monkhouse and Wilkinson, 1971). Unfortunately it is not always as straightforward to add these in R, and perhaps less so  using the ggplot2 paradigm, when compared to a conventional GIS. Here we will outline the ways in which annotations can be added. 
 
@@ -117,8 +121,9 @@ But what if we want to add a new layer from a completely different
 dataset To do this, we must not add any arguments
 to the `ggplot` function, only adding data sources one layer at a time:
 
-#north arrow
+# North arrow
 
+```{r}
 ggplot() + geom_polygon(data = wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) + 
     geom_line(aes(x = c(-160, -160), y = c(0, 25)), arrow = arrow())
 
@@ -154,16 +159,9 @@ hscale_text = function(breaks, ...)
                      ...))
 
 }
+```
 
 There is an almost infinite number of different combinations of the above parameters so take inspiration from maps and graphics you have seen and liked. The process is an iterative one, it will take multiple attempts to get right. Show your map to friends and colleagues- all will have an opinion but don’t be afraid to stand by the decisions you have taken. 
 
 
 Consistency- across papers.
-
-
-
-References
-
-Monkhouse, F.J. and Wilkinson, H. R. 1973. Maps and Diagrams Their Compilation and Construction (3rd Edition, reprinted with revisions). London: Methuen & Co Ltd. 
-
-Wickham, H. 2010. A Layered Grammar of Graphics. American Statistical Association, Institute of Mathematics Statistics and Interface Foundation of North America Journal of Computational and Graphical Statistics. 19, 1: 3-28
