--- a/Section2_R_and_Spatial_Data.Rmd
+++ b/Section2_R_and_Spatial_Data.Rmd
@@ -36,8 +36,8 @@ type. Let's start with a `.gpx` file, a tracklog recording a bicycle
 ride from Sheffield to Wakefield which was uploaded Open Street Map.
 [!!! more detail?]
 
-```{r Leeds to Sheffield GPS data}
-# download.file("http://www.openstreetmap.org/trace/1619756/data", destfile = "data/gps-trace.gpx")
+```{r Leeds to Sheffield GPS data, message=FALSE, results='hide'}
+download.file("http://www.openstreetmap.org/trace/1619756/data", destfile = "data/gps-trace.gpx")
 library(rgdal) # load the gdal package
 shf2lds <- readOGR(dsn = "data/gps-trace.gpx", layer = "tracks") # load track
 plot(shf2lds)
