--- a/Section2_R_and_Spatial_Data.Rmd
+++ b/Section2_R_and_Spatial_Data.Rmd
@@ -28,7 +28,7 @@ data from two spatial data formats: GPS eXchange (`.gpx`) and an ESRI
 Shapefile (consisting of at least files with `.shp`, `.shx` and `.dbf`
 extensions).
 
-`readOGR` is in fact cabable of loading dozens more file formats, so the
+`readOGR` is in fact capable of loading dozens more file formats, so the
 focus is on the *method* rather than the specific formats. The 'take
 home message' is that the `readOGR` function is capable of loading most
 common spatial file formats, but behaves differently depending on file
@@ -55,7 +55,7 @@ are `url` (we could have typed`url =` before the link) and `destfile`
 (which means destination file). As with any function, more optional
 arguments can be viewed by typing `?download.file`.
 
-When `rgdal` has succesfully loaded, the next task is not to import the
+When `rgdal` has successfully loaded, the next task is not to import the
 file directly, but to find out which *layers* are available to import,
 with the function `ogrListLayers`. The output from this command tells us
 that various layers are available, including `tracks` and
@@ -66,7 +66,7 @@ object (see section ... for more on this).
 
 As stated in the help documentation (accessed by entering `?readOGR`),
 the `dsn =` argument is interpreted differently depending on the type of
-file used. In the above example, the filename was the data source name.
+file used. In the above example, the file name was the data source name.
 To load Shapefiles, by contrast, the *folder* containing the data is
 used:
 
@@ -79,7 +79,7 @@ R's current working directory (remember to check this using `getwd()`).
 If the files were stored in the working directory, one would use
 `dsn = "."` instead. Again, it may be wise to plot the data that
 results, to ensure that it has worked correctly. Now that the data has
-been loaded into R's own `sp` format, try interogating and plotting it,
+been loaded into R's own `sp` format, try interrogating and plotting it,
 using functions such as `summary` and `plot`.
 
 ### The size of spatial datasets in R
@@ -95,7 +95,7 @@ into how long certain functions will take to run.
 
 In the absence of prior knowledge, which of the two objects loaded in
 the previous section would be expected to take up more memory. One could
-hypothesise that the London boroughs represented by the object `lnd`
+hypothesize that the London boroughs represented by the object `lnd`
 would be larger, but how much larger? We could simply look at the size
 of the associated files, but R also provides a function (`object.size`)
 for discovering how large objects loaded into its workspace are:
@@ -121,7 +121,7 @@ sapply(shf2lds@lines, function(x) nrow(x@Lines[[1]]@coords))
 It is quite likely that the above code little sense at first; the
 important thing to remember is that for each object we performed two
 functions: 1) a check that each line or polygon consists only of a
-single *part* (that can be joined to attribut data) and 2) the use of
+single *part* (that can be joined to attribute data) and 2) the use of
 `nrow` to count the number of vertices. The use of the `@` symbol should
 seem strange - its meaning will become clear in the section !!!. (Note
 also that the function `fortify`, discussed in section !!!, can also be
@@ -156,11 +156,11 @@ In the above block of code, `gSimplify` is given the object `shf2lds`
 and the `tol` argument, short for "tolerance", is set at 0.001 (much
 larger values may be needed, for data that use is *projected* - does not
 use latitude and longitude). Comparison between the sizes of the
-simplified object and the orginal shows that the new object is less than
-3% of its original size. Try plotting the orginal and simplified tracks
-on your computer: when visualised using the `plot` function, it becomes
+simplified object and the original shows that the new object is less than
+3% of its original size. Try plotting the original and simplified tracks
+on your computer: when visualized using the `plot` function, it becomes
 clear that the object `shf2lds.simple` retains the overall shape of the
-line and is virtually indistinguishable from the orginal object.
+line and is virtually indistinguishable from the original object.
 
 This example is rather contrived because even the larger object
 `shf2lds` is only 0.107 Mb, negligible compared with the gigabytes of
@@ -235,10 +235,10 @@ plot(lnd.stations[round(runif(n = 500, min = 1, max = nrow(lnd.stations))),], ad
 
 The above code reads in a `SpatialPointsDataFrame` consisting of 2532
 transport nodes in and surrounding London and then plots a random sample
-of 500 of these over the previously loaded borough level adminsitrative
-boundaries. The reason for ploting a sample of the points rather than
+of 500 of these over the previously loaded borough level administrative
+boundaries. The reason for piloting a sample of the points rather than
 all of them is that the boundary data becomes difficult to see if all of
-the points are ploted. It is also useful to see and practice sampling
+the points are piloted. It is also useful to see and practice sampling
 techniques in practice; try to plot only the first 500 points, rather
 than a random selection, and describe the difference.
 
@@ -340,7 +340,7 @@ In this case we have three potentially interesting variables: "LEGEND",
 telling us what the point is, "NAME", and "MICE", which represents the
 number of mice sightings reported by the public at that point (this is a
 fictional variable). To illustrate the power of the `aggregate`
-function, let us use it to find the average number of mices spotted in
+function, let us use it to find the average number of mice spotted in
 transport points in each London borough, and the standard deviation:
 
 ```{r, results='hide'}
