--- a/Section2_R_and_Spatial_Data.Rmd
+++ b/Section2_R_and_Spatial_Data.Rmd
@@ -6,8 +6,8 @@ Spatial Data in R
 
 In any data analysis project, spatial or otherwise, it is important to
 have a strong understanding of the dataset before progressing. This
-section will therefore begin with a description of the input data used
-in this section. We will see how data can be loaded into R and exported
+section will therefore begin with a description of the input data. 
+We will see how data can be loaded into R and exported
 to other formats, before going into more detail about the underlying
 structure of spatial data in R: how it 'sees' spatial data is quite
 unique.
@@ -17,24 +17,23 @@ unique.
 In most situations, the starting point of spatial analysis tasks is
 loading in pre-existing datasets. These may originate from government
 agencies, remote sensing devices or 'volunteered geographical
-information' from GPS devices, online databases such as Open Street Map
-or geo-tagged social media (Goodchild 2007). The diversity of
+information' (Goodchild 2007). The diversity of
 geographical data formats is large.
 
 R is able to import a very wide range of spatial data formats thanks to
 its interface with the Geospatial Data Abstraction Library (GDAL), which
-is enabled by loading the package `rgdal` into R. Below we will load
+is enabled by the package `rgdal`. Below we will load
 data from two spatial data formats: GPS eXchange (`.gpx`) and an ESRI
-Shapefile (consisting of at least files with `.shp`, `.shx` and `.dbf`
-extensions).
+Shapefile.
 
 `readOGR` is in fact capable of loading dozens more file formats, so the
 focus is on the *method* rather than the specific formats. The 'take
 home message' is that the `readOGR` function is capable of loading most
 common spatial file formats, but behaves differently depending on file
 type. Let's start with a `.gpx` file, a tracklog recording a bicycle
-ride from Sheffield to Wakefield which was uploaded Open Street Map.
-[!!! more detail?]
+ride from Sheffield to Wakefield which was uploaded Open Street Map
+[3].
+
 
 ```{r Leeds to Sheffield GPS data, message=FALSE, results='hide'}
 download.file("http://www.openstreetmap.org/trace/1619756/data", destfile = "data/gps-trace.gpx")
@@ -51,22 +50,24 @@ about what has happened, line-by-line.
 
 First, we used R to *download* a file from the internet, using the
 function `download.file`. The two essential arguments of this function
-are `url` (we could have typed`url =` before the link) and `destfile`
-(which means destination file). As with any function, more optional
-arguments can be viewed by typing `?download.file`.
+are `url` (we could have typed `url =` before the link) and `destfile`,
+the destination file. As with any function, more optional
+arguments can be viewed by by typing `?download.file`.
 
 When `rgdal` has successfully loaded, the next task is not to import the
-file directly, but to find out which *layers* are available to import,
-with the function `ogrListLayers`. The output from this command tells us
+file directly, but to find out which *layers* are available to import, 
+with `ogrListLayers`. The output from this command tells us
 that various layers are available, including `tracks` and
-`track_points`, which we subsequently load using `readOGR`. The basic
-`plot` function is used to plot the newly imported objects, ensuring
+`track_points`: try it. These are imported into R's *workspace* using `readOGR`. 
+
+Finally, the basic
+`plot` function is used to visualize the newly imported objects, ensuring
 they make sense. In the second `plot` function, we take a subset of the
 object (see section ... for more on this).
 
 As stated in the help documentation (accessed by entering `?readOGR`),
 the `dsn =` argument is interpreted differently depending on the type of
-file used. In the above example, the file name was the data source name.
+file used. In the above example, the file name was the file name.
 To load Shapefiles, by contrast, the *folder* containing the data is
 used:
 
@@ -74,7 +75,7 @@ used:
 lnd <- readOGR(dsn = "data/", "london_sport")
 ```
 
-Here, the data is assumed to reside in a folder entitled `data` which in
+Here, the files reside in a folder entitled `data` which in
 R's current working directory (remember to check this using `getwd()`).
 If the files were stored in the working directory, one would use
 `dsn = "."` instead. Again, it may be wise to plot the data that
@@ -88,17 +89,16 @@ Any data that has been read into R's *workspace*, which constitutes all
 objects that can be accessed by name and can be listed using the `ls()`
 function, can be saved in R's own data storage file type, `.RData`.
 Spatial datasets can get quite large and this can cause problems on
-computers by consuming all available random access memory (RAM) or hard
-disk space available to the computer. It is therefore wise to understand
-roughly how large spatial objects are; this will also provide insight
+computers by consuming all available memory (RAM) or hard
+disk space. It is wise to understand
+roughly how large spatial objects are, providing insight
 into how long certain functions will take to run.
 
 In the absence of prior knowledge, which of the two objects loaded in
-the previous section would be expected to take up more memory. One could
+the previous section would one expect to be larger? One could
 hypothesize that the London boroughs represented by the object `lnd`
-would be larger, but how much larger? We could simply look at the size
-of the associated files, but R also provides a function (`object.size`)
-for discovering how large objects loaded into its workspace are:
+would be larger based on its greater spatial extent, but how much larger? 
+The answer in R is found in the function `object.size`:
 
 ```{r}
 object.size(shf2lds)
@@ -115,10 +115,10 @@ x <- sapply(lnd@polygons, function(x) nrow(x@Polygons[[1]]@coords))
 sum(x)
 
 sapply(shf2lds@lines, function(x) length(x))
-sapply(shf2lds@lines, function(x) nrow(x@Lines[[1]]@coords))
+(nverts <- sapply(shf2lds@lines, function(x) nrow(x@Lines[[1]]@coords)))
 ```
 
-It is quite likely that the above code little sense at first; the
+It is quite likely that the above code little sense at first. The
 important thing to remember is that for each object we performed two
 functions: 1) a check that each line or polygon consists only of a
 single *part* (that can be joined to attribute data) and 2) the use of
@@ -141,8 +141,7 @@ be useful for other types of analysis) raises the question following
 question: can the object be simplified such that its key features
 features remain while substantially reducing its size? The answer is
 yes. In the code below, we harness the power of the `rgeos` package and
-its `gSimplify` function to simplify spatial R objects (the code can
-also be used to simplify polygon geometries):
+its `gSimplify` function to simplify spatial R objects:
 
 ```{r fig.keep='none'}
 library(rgeos)
@@ -165,44 +164,190 @@ line and is virtually indistinguishable from the original object.
 This example is rather contrived because even the larger object
 `shf2lds` is only 0.107 Mb, negligible compared with the gigabytes of
 RAM available to modern computers. However, it underlines a wider point:
-for *visualisation* purposes at small spatial scales (i.e. covering a
-large area of the Earth on a small map), the *geometries* associated
-with spatial data can often be simplified to reduce processing time and
-usage of RAM. The other advantage of simplification is that it reduces
-the size occupied by spatial datasets when they are saved.
+for visualizing *small scale* maps, spatial data *geometries*
+can often be simplified to reduce processing time and
+use of computer memory.
 
 ### Saving and exporting spatial objects
+
+A typical R workflow involves loading the data, processing
+and finally exporting the data in a new form. `writeOGR`, the 
+logical counterpart of `readOGR` is ideal for this task.
+Imagine that we want to view the simplified `gpx` data
+in software that can only read Shapefiles. This is performed using
+the following command:
+
+```{r}
+shf2lds.simple <- SpatialLinesDataFrame(shf2lds.simple, data = data.frame(row.names = "0", a = 1))
+writeOGR(shf2lds.simple, dsn = "data/", layer = "shf2lds", driver = "ESRI Shapefile")
+```
+
+In the above code, the object was first converted into a spatial dataframe class, before 
+being exported as a shapefile entitled shf2lds. Unlike with `readOGR`, the driver must 
+be specified, in this case with "ESRI Shapefile" [4]. The simplified GPS data is now available
+to other GIS programs for further analysis.
 
 The structure of spatial data in R
 ----------------------------------
 
-### Spatial\* data
+Spatial datasets in R are saved in their own format, defined as 
+`Spatial...` classes within the `sp` package. For this reason, 
+`sp` is the basic spatial package in R, upon which the others depend. 
+Spatial classes range from the simples class `Spatial` to the most complex, 
+`SpatialPolygonsDataFrame`: the `Spatial` class contains only two required *slots*[5]:
 
-#### Points
+```{r}
+getSlots("Spatial")
+```
 
-#### Lines
+Further details on these can be found by typing `?bbox` and `?proj4string`. 
+All other spatial classes in R build on 
+this foundation of a bounding box and a projection system (which 
+is set automatically to `NA` if it is not known). However, more complex 
+classes contain more slots, some of which are lists which contain additional 
+lists. To find out the slots of `shf2lds.simple`, for example, we would first 
+ascertain its class and then use the `getSlots` command:
 
-#### Polygons
+```{r}
+class(shf2lds.simple) # identify the object's class
+getSlots("SpatialLinesDataFrame") # find the associated slots
+```
 
-#### Grids and raster data
+The same principles apply to all spatial classes including 
+`Spatial* Points`, `Polygons` `Grids` and `Pixels`
+as well as associated `*DataFrame` classes. For more information on 
+this, see the `sp` documentation: `?Spatial`.
 
-The main spatial packages
--------------------------
-
-### sp
-
-### rgdal
-
-### rgeos
+```{r, echo=FALSE}
+# I think this is best mentioned briefly in the intro...
+# The main spatial packages
+# -------------------------
+# 
+# ### sp
+# 
+# ### rgdal
+# 
+# ### rgeos
+```
 
 Manipulating spatial data
 -------------------------
 
-### Coordinate reference systems and transformations
+### Coordinate reference systems
 
-### Attribute joins
+As mentioned in the previous section, all `Spatial` objects in R
+are allocated a coordinate reference system (CRS).
+The CRS of any spatial object can be found using the command 
+`proj4string`. In some cases the CRS is not known: in this case 
+the result will simply be `NA`.
+To discover the CRS of the `lnd` object for example, 
+type the following: 
 
-### Spatial joins
+```{r}
+proj4string(lnd)
+```
+
+The output may seem cryptic but is in fact highly informative: `lnd` has *projected*
+coordinates, based on the 
+[*Transverse Mercator*](http://en.wikipedia.org/wiki/Transverse_Mercator_projection)
+system (hence `"+proj=tmerc"` in the output) and its origin is at latitude 49N, -2E.
+This point is 
+
+If we *know* that the CRS is incorrectly specified, it can be re-set.
+In this case, for example we know that `lnd` actually has a CRS OSGB1936.
+Knowing also that the code for this is 27700, it can be updated as follows:
+
+```{r, warning=FALSE}
+proj4string(lnd) <- CRS("+init=epsg:27700")
+proj4string(lnd)
+```
+
+The CRS has now been updated - note that the key details are all the same as before. 
+Note: this method **should never** be used as an attempt to *reproject* data from
+one CRS to another. 
+
+### Reprojecting data
+
+Transforming the coordinates of spatial data from one CRS to another (reprojection)
+is a common task in GIS. This is because data
+from national sources are generally provided in *projected* coordinates
+(the location on the cartesian coordinates of a map) whereas data from GPSs and the internet 
+are generally provided in *geographic* coordinates, with
+latitude and longitude measured in degrees to locate points on the surface of the globe.
+
+Reprojecting data in R is quite simple: all you need is a spatial object with a known
+CRS and knowledge of the CRS you wish to transform it to. To illustrate why that is necessary, 
+try to plot the objects `lnd` and `shf2lnd.simple` on the same map:
+
+```{r Plot of spatial objects with different CRS}
+combined <- rbind(fortify(shf2lds.simple)[, 1:2], fortify(lnd)[, 1:2])
+plot(combined)
+```
+
+In the above code we first extracted the coordinates of each point 
+using `fortify` and then plotted them using `plot`. The image shows why 
+reprojection is necessary: the .gpx data are on a totally different scale
+than the shapefile of London. Hence the tiny dot at the bottom right of the graph.
+We will now reproject the data, allowing `lnd` and `shf2lds.simple` to be
+usefully plotted on the same graphic:
+
+```{r}
+lnd.wgs84 <- spTransform(lnd, CRSobj = CRS("+init=epsg:4326"))
+```
+
+The above code created a new object,`lnd.wgs84`, that contains the 
+same geometries as the original but in a new CRS using the 
+`spTransform` function. The `CRS` argument was set to 
+`"+init=epsg:4326"`, which represents the WGS84 CRS via an 
+EPSG code [6]. Now `lnd` has been reprojected we can plot it 
+next to the GPS data:
+
+```{r Plot of spatial objects sharing the same CRS}
+combined <- rbind(fortify(shf2lds.simple)[, 1:2], fortify(lnd.wgs84)[, 1:2])
+plot(combined)
+```
+
+Although the plot of the reprojected data is squashed because the axis scales are not fixed
+and distorted (*geographic* coordinates such as WGS84 should not usually be used for plotting), 
+at least the relative position and shape of both objects can now be seen. The presence of the 
+dotted line in the top left of the plot confirms our assumption that the GPS data is 
+from around Sheffield, which is northwest of London.
+
+### Attribute join
+
+Because boroughs are official administrative
+zones, there is much data available at this level that we 
+can link to the polygons in the `lnd` object. We will use the example 
+of crime data to illustrate this data availability, which is 
+stored in the `data` folder available from this project's github page.
+
+```{r}
+load("data/crimeAg.Rdata") # load the crime dataset from an R dataset
+```
+
+After the dataset has been explored (e.g. using the `summary` and `head` functions)
+to ensure compatibility, it can be joined to `lnd`. We will use the
+the `join` function in the `plyr` package but the `merge` function 
+could equally be used (remember to type `library(plyr)` if needed).
+
+```{r, echo=FALSE}
+library(plyr)
+```
+
+`join` requires all joining variables to have the 
+same name, but this work has already been done. Once 
+this preparation has been done, the 
+join funtion is actually very simple:
+
+```{r, results='hide'}
+lnd@data <- join(lnd@data, crimeAg)
+```
+
+Take a look at the `lnd@data` object. You should 
+see new variables added, meaning the attribute join 
+was successful. 
+
+### Spatial join
 
 A spatial join, like attribute joins, is used to transfer information
 from one dataset to another. There is a clearly defined direction to
